--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngrx-17",
+  "name": "ngrx-18",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,14 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.2.10",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.10",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ngrx/effects": "^18.1.0",
+    "@ngrx/entity": "^18.1.0",
+    "@ngrx/router-store": "^18.1.0",
+    "@ngrx/store": "^18.1.0",
+    "@ngrx/store-devtools": "^18.1.0",
+    "json": "^11.0.0",
+    "json-server": "^0.17.4",
     "rxjs": "~7.8.0",
+    "server": "^1.0.41",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
